--- a/src/index.html
+++ b/src/index.html
@@ -68,37 +68,73 @@
 
     <section class="promo">
       <div class="wrapper">
-        <h1 class="promo__title">
-          Маркшейдерское обслуживание
-        </h1>
-        <div class="p promo__text">
-          Проектирование горных производств и объектов, маркшейдерское обеспечение горных работ
-        </div>
-        <a href="" class="promo__btn btn">
-          Оставить заявку
-        </a>
-        <ul class="promo__info">
-          <li>
-            <p>Ежедневно с 08:00 до 18:00</p>
-            <a>+7(495) 776 06 34</a>
-            <a>+7 (926) 566 10 58</a>
-            <a>info@geoconect.ru</a>
-          </li>
+        <div class="promo__inner">
+          <h1 class="promo__title">
+            Маркшейдерское обслуживание
+          </h1>
+          <div class="p promo__text">
+            Проектирование горных производств и объектов, маркшейдерское обеспечение горных работ
+          </div>
+          <a href="" class="promo__btn btn">
+            Оставить заявку
+          </a>
+          <ul class="promo__info">
+            <li>
+              <p>Ежедневно с 08:00 до 18:00</p>
+              <a href="tel:+74957760634">+7(495) 776 06 34</a>
+              <a href="tel:+79265661058">+7 (926) 566 10 58</a>
+              <a href="mailto:info@geoconect.ru">info@geoconect.ru</a>
+              </li>
 
-          <li>
-            <dl>
-              <dt>Адреc:</dt>
-              <dd>115477, г. Москва, ул. Деловая, д.11, корпус 1.</dd>
-            </dl>
-          </li>
-
-          <li>
-            <dl>
-              <dt>Генеральный директор :</dt>
-              <dd>Горюшкин Валерий Викторович</dd>
-            </dl>
-          </li>
-        </ul>
+            <li>
+              <dl>
+                <dt>Адреc:</dt>
+                <dd>115477, г. Москва, ул. Деловая, д.11, корпус 1.</dd>
+              </dl>
+            </li>
+            <li>
+              <dl>
+                <dt>Генеральный директор :</dt>
+                <dd>Горюшкин Валерий Викторович</dd>
+              </dl>
+            </li>
+            </ul>
+          <div class="promo__social">
+            <p class="promo__social-text">
+              Подписывайтесь в соцсетях
+            </p>
+            <ul class="promo__social-list">
+              <li class="promo__social-item">
+                <a href="">
+                  <svg class="img">
+                    <use xlink:href="img/sprite.svg#icon__instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="">
+                  <svg class="img">
+                    <use xlink:href="img/sprite.svg#icon__youtube"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="">
+                  <svg class="img">
+                    <use xlink:href="img/sprite.svg#icon__facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="promo__social-item">
+                <a href="">
+                  <svg class="img">
+                    <use xlink:href="img/sprite.svg#icon__twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          </div>
       </div>
     </section>
 
