переделал promo убрал гриды, добавил флексы

--- a/src/index.html
+++ b/src/index.html
@@ -68,16 +68,53 @@
 
     <section class="promo">
       <div class="wrapper">
-        <div class="promo__inner">
-          <h1 class="promo__title">
-            Маркшейдерское обслуживание
+        <h1 class="promo__title">
+          Маркшейдерское обслуживание
           </h1>
-          <div class="p promo__text">
-            Проектирование горных производств и объектов, маркшейдерское обеспечение горных работ
+        <div class="promo__inner">
+          <div class="promo__left">
+            <p class="promo__text">
+              Проектирование горных производств и объектов, маркшейдерское обеспечение горных работ
+            </p>
+            <a href="" class="promo__btn btn">
+              Оставить заявку
+            </a>
+            <div class="promo__social">
+              <p class="promo__social-text">
+                Подписывайтесь в соцсетях
+              </p>
+              <ul class="promo__social-list">
+                <li class="promo__social-item">
+                  <a href="">
+                    <svg class="img">
+                      <use xlink:href="img/sprite.svg#icon__instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="promo__social-item">
+                  <a href="">
+                    <svg class="img">
+                      <use xlink:href="img/sprite.svg#icon__youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="promo__social-item">
+                  <a href="">
+                    <svg class="img">
+                      <use xlink:href="img/sprite.svg#icon__facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="promo__social-item">
+                  <a href="">
+                    <svg class="img">
+                      <use xlink:href="img/sprite.svg#icon__twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <a href="" class="promo__btn btn">
-            Оставить заявку
-          </a>
           <ul class="promo__info">
             <li>
               <p>Ежедневно с 08:00 до 18:00</p>
@@ -99,41 +136,6 @@
               </dl>
             </li>
           </ul>
-          <div class="promo__social">
-            <p class="promo__social-text">
-              Подписывайтесь в соцсетях
-            </p>
-            <ul class="promo__social-list">
-              <li class="promo__social-item">
-                <a href="">
-                  <svg class="img">
-                    <use xlink:href="img/sprite.svg#icon__instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="promo__social-item">
-                <a href="">
-                  <svg class="img">
-                    <use xlink:href="img/sprite.svg#icon__youtube"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="promo__social-item">
-                <a href="">
-                  <svg class="img">
-                    <use xlink:href="img/sprite.svg#icon__facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="promo__social-item">
-                <a href="">
-                  <svg class="img">
-                    <use xlink:href="img/sprite.svg#icon__twitter"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </section>
@@ -223,7 +225,8 @@
               <p>
                 В рамках реализации кадровой политики ООО «Геоконект» особое внимание уделяется процессу непрерывного
                 повышения
-                профессионального уровня сотрудников. Руководящие работники и специалисты компании в установленном порядке
+                профессионального уровня сотрудников. Руководящие работники и специалисты компании в установленном
+                порядке
                 обучены и
                 аттестованы по вопросам промышленной безопасности и охраны труда, регулярно проходят курсы повышения
                 квалификации в
