--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
               </p>
               <p>Высокая деловая репутация ООО «Геоконект» подтверждена многочисленными положительными отзывами
                 Заказчиков.</p>
-              <a href="" class="documents__btn btn">
+              <a href="" class="documents__btn btn btn--trans">
                 Заказать обратный звонок
               </a>
             </div>
@@ -331,6 +331,44 @@
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="wrapper">
+        <div class="about__inner">
+          <div class="about__content">
+            <h2 class="about__title section-title">
+              О компании
+            </h2>
+            <div class="about__text">
+              <p>
+                Наша организация успешно осуществляет работы по проектированию горных производств и объектов,
+                маркшейдерскому
+                обеспечению горных работ и комплексу инженерно - геодезических изысканий.
+              </p>
+    
+              <p>
+                С нашей стороны все выполняемые работы сопровождаются при их экспертизе и согласовании в соответствующих
+                органах
+                исполнительной власти РФ.
+              </p>
+    
+              <p>
+                Благодаря своевременному соблюдению договорных обязательств, требований законодательства, высокому уровню
+                ответственности и квалифицированному кадровому персоналу ООО «Геоконект» имеет безупречную репутацию во
+                взаимоотношениях
+                с заказчиками и органами государственной власти РФ.
+              </p>
+            </div>
+            <a href="" class="about__btn btn btn--trans">
+              Заказать обратный звонок
+            </a>
+          </div>
+          <div class="about__img">
+            <img src="img/about__logo.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
 
