--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,11 @@
             </li>
           </ul>
         </nav>
-        <a href="" class="header__btn-wrapper">
-          <span class="header__menu-btn"></span>
-        </a>
+        <div class="header__btn--wrapper">
+          <button class="header__btn">
+            <span></span>
+          </button>
+        </div>
       </div>
     </div>
   </header>
@@ -347,13 +349,13 @@
                 маркшейдерскому
                 обеспечению горных работ и комплексу инженерно - геодезических изысканий.
               </p>
-    
+
               <p>
                 С нашей стороны все выполняемые работы сопровождаются при их экспертизе и согласовании в соответствующих
                 органах
                 исполнительной власти РФ.
               </p>
-    
+
               <p>
                 Благодаря своевременному соблюдению договорных обязательств, требований законодательства, высокому уровню
                 ответственности и квалифицированному кадровому персоналу ООО «Геоконект» имеет безупречную репутацию во
