--- a/src/index.html
+++ b/src/index.html
@@ -357,7 +357,8 @@
               </p>
 
               <p>
-                Благодаря своевременному соблюдению договорных обязательств, требований законодательства, высокому уровню
+                Благодаря своевременному соблюдению договорных обязательств, требований законодательства, высокому
+                уровню
                 ответственности и квалифицированному кадровому персоналу ООО «Геоконект» имеет безупречную репутацию во
                 взаимоотношениях
                 с заказчиками и органами государственной власти РФ.
@@ -370,6 +371,29 @@
           <div class="about__img">
             <img src="img/about__logo.png" alt="">
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="wrapper">
+        <div class="contact__inner">
+          <div class="contact__text-wrapper">
+            <h2 class="contact__title">
+              Оставьте заявку на бесплатную консультацию
+            </h2>
+            <p class="contact__text">
+              Мы перезвоним Вам в ближайшее время
+            </p>
+          </div>
+          <form class="contact__form" action="">
+            <input type="text" class="contact__input contact__from-element" placeholder="Ваше имя">
+            <input type="text" class="contact__input contact__from-element" placeholder="+7 (___) ___-__-__">
+            <button type="submit" class="contact__btn btn contact__from-element">Отправить заявку</button>
+            <p class="contact__warning">
+              Нажимая кнопку Вы даете согласие на <a href="">обработку персональных данных</a>
+            </p>
+          </form>
         </div>
       </div>
     </section>
