--- a/src/index.html
+++ b/src/index.html
@@ -400,6 +400,58 @@
 
   </main>
 
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer__inner">
+        <a class="footer__logo">
+          <img src="img/logo.png" alt="">
+        </a>
+        <ul class="footer__link-list">
+          <li class="footer__link-item">
+            <a href="">
+              Политика конфиденциальности
+            </a>
+          </li>
+          <li class="footer__link-item">
+            <a href="">
+              Соглашение на обработку персональных данных
+            </a>
+          </li>
+        </ul>
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a href="">
+              <svg class="img">
+                <use xlink:href="img/sprite.svg#icon__instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a href="">
+              <svg class="img">
+                <use xlink:href="img/sprite.svg#icon__youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a href="">
+              <svg class="img">
+                <use xlink:href="img/sprite.svg#icon__facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a href="">
+              <svg class="img">
+                <use xlink:href="img/sprite.svg#icon__twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
 
   <script src="js/main.js"></script>
 </body>
