--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             </li>
             <li class="header__nav-item">
               <a href="">
-                Сертефикаты
+                Сертификаты
               </a>
             </li>
             <li class="header__nav-item">
