--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <a class="header__logo">
           <img src="img/logo.png" alt="">
         </a>
-        <nav class="header__nav">
+        <nav class="header__nav js__menu">
           <ul class="header__nav-list">
             <li class="header__nav-item">
               <a href="">
@@ -58,7 +58,7 @@
           </ul>
         </nav>
         <div class="header__btn--wrapper">
-          <button class="header__btn">
+          <button class="header__btn header__btn--open js__btn">
             <span></span>
           </button>
         </div>
@@ -68,7 +68,7 @@
 
   <main class="main">
 
-    <section class="promo">
+    <!-- <section class="promo">
       <div class="wrapper">
         <h1 class="promo__title">
           Маркшейдерское обслуживание
@@ -140,9 +140,9 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="works">
+    <!-- <section class="works">
       <div class="wrapper">
         <h2 class="works__title">
           Виды работ
@@ -209,9 +209,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="documents">
+    <!-- <section class="documents">
       <div class="wrapper">
         <h2 class="section-title documents__title">
           Наши сертефикаты
@@ -246,9 +246,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="news">
+    <!-- <section class="news">
       <div class="wrapper">
         <h2 class="section-title news__title">
           Новости
@@ -334,9 +334,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="about">
+    <!-- <section class="about">
       <div class="wrapper">
         <div class="about__inner">
           <div class="about__content">
@@ -373,9 +373,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="contact">
+    <!-- <section class="contact">
       <div class="wrapper">
         <div class="contact__inner">
           <div class="contact__text-wrapper">
@@ -396,11 +396,11 @@
           </form>
         </div>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="wrapper">
       <div class="footer__inner">
         <a class="footer__logo">
@@ -450,7 +450,7 @@
         </ul>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
 
   <script src="js/main.js"></script>
