header, promo mobile are ready

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header js__header">
     <div class="wrapper">
       <div class="header__inner">
         <a class="header__logo">
@@ -68,7 +68,7 @@
 
   <main class="main">
 
-    <!-- <section class="promo">
+    <section class="promo">
       <div class="wrapper">
         <h1 class="promo__title">
           Маркшейдерское обслуживание
@@ -140,7 +140,7 @@
           </ul>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="works">
       <div class="wrapper">
