--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <!-- <section class="works">
+    <section class="works">
       <div class="wrapper">
         <h2 class="works__title">
           Виды работ
@@ -209,7 +209,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="documents">
       <div class="wrapper">
