documents is ready

--- a/src/index.html
+++ b/src/index.html
@@ -211,10 +211,10 @@
       </div>
     </section>
 
-    <!-- <section class="documents">
+    <section class="documents">
       <div class="wrapper">
         <h2 class="section-title documents__title">
-          Наши сертефикаты
+          Наши сертификаты
         </h2>
         <div class="documents__inner">
           <div class="documents__left documents__img-wrpapper">
@@ -246,7 +246,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="news">
       <div class="wrapper">
