--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
       </div>
     </section>
 
-    <!-- <section class="news">
+    <section class="news">
       <div class="wrapper">
         <h2 class="section-title news__title">
           Новости
@@ -334,7 +334,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="about">
       <div class="wrapper">
