--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,7 @@
       </div>
     </section>
 
-    <!-- <section class="about">
+    <section class="about">
       <div class="wrapper">
         <div class="about__inner">
           <div class="about__content">
@@ -344,6 +344,9 @@
               О компании
             </h2>
             <div class="about__text">
+              <div class="about__img about__img--tablet">
+                <img src="img/about__logo.png" alt="">
+              </div>
               <p>
                 Наша организация успешно осуществляет работы по проектированию горных производств и объектов,
                 маркшейдерскому
@@ -363,17 +366,18 @@
                 взаимоотношениях
                 с заказчиками и органами государственной власти РФ.
               </p>
+
             </div>
             <a href="" class="about__btn btn btn--trans">
               Заказать обратный звонок
             </a>
           </div>
-          <div class="about__img">
+          <div class="about__img about__img--desktop">
             <img src="img/about__logo.png" alt="">
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="contact">
       <div class="wrapper">
