--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@
       </div>
     </section>
 
-    <!-- <section class="contact">
+    <section class="contact">
       <div class="wrapper">
         <div class="contact__inner">
           <div class="contact__text-wrapper">
@@ -400,7 +400,7 @@
           </form>
         </div>
       </div>
-    </section> -->
+    </section>
 
   </main>
 
