--- a/src/index.html
+++ b/src/index.html
@@ -404,25 +404,27 @@
 
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="wrapper">
       <div class="footer__inner">
-        <a class="footer__logo">
-          <img src="img/logo.png" alt="">
-        </a>
-        <ul class="footer__link-list">
-          <li class="footer__link-item">
-            <a href="">
-              Политика конфиденциальности
-            </a>
-          </li>
-          <li class="footer__link-item">
-            <a href="">
-              Соглашение на обработку персональных данных
-            </a>
-          </li>
-        </ul>
-        <ul class="footer__social-list">
+        <div class="footer__column footer__column--left">
+          <a class="footer__logo">
+            <img src="img/logo.png" alt="">
+          </a>
+          <ul class="footer__link-list">
+            <li class="footer__link-item">
+              <a href="">
+                Политика конфиденциальности
+              </a>
+            </li>
+            <li class="footer__link-item">
+              <a href="">
+                Соглашение на обработку персональных данных
+              </a>
+            </li>
+          </ul>
+        </div>
+        <ul class="footer__social-list footer__column footer__column--right">
           <li class="footer__social-item">
             <a href="">
               <svg class="img">
@@ -454,7 +456,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 
   <script src="js/main.js"></script>
