--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <meta property="og:url" content="https://gorushkin.github.io/geoconect/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Геоконект: Маркшейдерское обслуживание" />
+  <meta property="og:title" content="Геоконект" />
+  <meta property=" og:description" content="Маркшейдерское обслуживание -
+Проектирование горных производств и объектов, маркшейдерское обеспечение горных работ" />
+  <meta property="og:image" content="https://gorushkin.github.io/geoconect/img/about__logo.png" />
   <title>Geoconect</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
