Заменил ссылки, добавил скролл

--- a/src/index.html
+++ b/src/index.html
@@ -38,27 +38,27 @@
         <nav class="header__nav js__menu">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="">
+              <a href="#works">
                 Виды работ
               </a>
             </li>
             <li class="header__nav-item">
-              <a href="">
+              <a href="#documents">
                 Сертификаты
               </a>
             </li>
             <li class="header__nav-item">
-              <a href="">
+              <a href="#news">
                 Новости
               </a>
             </li>
             <li class="header__nav-item">
-              <a href="">
+              <a href="#about">
                 О Компании
               </a>
             </li>
             <li class="header__nav-item">
-              <a href="">
+              <a href="#contact">
                 Контакты
               </a>
             </li>
@@ -149,7 +149,7 @@
       </div>
     </section>
 
-    <section class="works">
+    <section id="works" class="works">
       <div class="wrapper">
         <h2 class="works__title">
           Виды работ
@@ -218,7 +218,7 @@
       </div>
     </section>
 
-    <section class="documents">
+    <section id="documents" class="documents">
       <div class="wrapper">
         <h2 class="section-title documents__title">
           Наши сертификаты
@@ -255,7 +255,7 @@
       </div>
     </section>
 
-    <section class="news">
+    <section id="news" class="news">
       <div class="wrapper">
         <h2 class="section-title news__title">
           Новости
@@ -343,7 +343,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section id="about" class="about">
       <div class="wrapper">
         <div class="about__inner">
           <div class="about__content">
@@ -386,7 +386,7 @@
       </div>
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
       <div class="wrapper">
         <div class="contact__inner">
           <div class="contact__text-wrapper">
